synergy (1.8.8-stable+dfsg.1-2) UNRELEASED; urgency=medium

  * Incorrect path in synergyc man page.
  * Change umask in key generation script so keys are not exposed.
  * Added ssl_umask.patch to set permissions on generated ssl certificates. 
  * Build using Qt5. Closes: #875199 

 -- Joshua Honeycutt <joshua.honeycutt@gmail.com>  Wed, 09 Aug 2017 11:34:57 -0500

synergy (1.8.8-stable+dfsg.1-1) unstable; urgency=low

  * New upstream version.
  * Added delete_temp_config.patch to enable deletion of qt_temp files.
    Closes: #765955
  * Remove clipboardchunktests.patch (merged upstream)

 -- Joshua Honeycutt <joshua.honeycutt@gmail.com>  Sat, 11 Mar 2017 17:38:53 -0600

synergy (1.8.7-stable+dfsg.1-2) experimental; urgency=medium

  * Correct missing tags in man page sgml source. Fix formatting and an extra
    argument.
  * Added clipboardchunktest.patch to fix FTBFS due to a unit test on big
    endian archs.

 -- Joshua Honeycutt <joshua.honeycutt@gmail.com>  Tue, 14 Feb 2017 22:58:36 -0600

synergy (1.8.7-stable+dfsg.1-1) experimental; urgency=medium

  * New maintainer (Closes: #852081)
  * New upstream version. (Closes: #764390, #818490)
  * Update watchfile to check symless github.
  * Upstream tarball modified to remove non-DFSG files and unused external
    library tarballs.
  * Removed patches: cprotocolutil-writef, system-cryptopp, x11-mouseover. 
  * Added shell script to generate SSL key/certificate files for encryption
    (/usr/share/synergy/gen_ssl_pem.sh).
  * Updated man pages (removed old crypto++ references and command line
    options, added new command line options, formatting).
  * Added documentation to README.Debian on enabling crypto without the gui.
  * Added new_ssl patch to build against newer OpenSSL in Debian.
  * Added enable_pro patch to bypass activation for Pro features.
  * Added syntool binary and manual page.
  * lintian override for possible-gpl-code-linked-with-openssl due to
    upstream exception.