@@ -4,6 +4,7 @@ synergy (1.8.8-stable+dfsg.1-2) UNRELEASED; urgency=medium
   * Change umask in key generation script so keys are not exposed.
   * Added ssl_umask.patch to set permissions on generated ssl certificates. 
   * Build using Qt5. Closes: #875199 
+  * Address FTCBFS: Run cmake for the host architecture. Closes: #876163
 
  -- Joshua Honeycutt <joshua.honeycutt@gmail.com>  Wed, 09 Aug 2017 11:34:57 -0500
 
